--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,9 @@
 $green: #12e177;
 $orange: #ffc72a;
 $blue: #cedce4;
+$blue2: #aec6d1ff;
+
+
 
 body {
   font-family: 'Roboto', sans-serif;
@@ -11,7 +14,7 @@ body {
 }
 
 button {
-  background: none;
+  //background: transparentize($color: $blue2, $amount: 0.8);
   border: none;
   outline: none;
   &:hover {
@@ -76,20 +79,7 @@ button {
 	}
 }
 
-.btn-reset {
-  font-size: 0.8rem;
-  color: #fff;
-  border-radius: 15px;
-  padding: 12px 18px;
-  margin-top: 25px;
-  transition: all 0.2s;
-  background-color: $blue;
-  box-shadow: 0px 0px 0px 1px $orange;
-  &.active {
-    background-color: $orange;
-    box-shadow: none;
-  }
-}
+
 
 .board {
   .board-row {
