--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,9 +1,7 @@
-$green: #0dac5bff;
+$green: #12e177;
 $orange: #ffc72a;
 $blue: #cedce4;
-$blue2: #aec6d1ff;
-
-
+$blue2: #bacedaff;
 
 body {
   font-family: 'Roboto', sans-serif;
@@ -14,7 +12,7 @@ body {
 }
 
 button {
-  //background: transparentize($color: $blue2, $amount: 0.8);
+  background: $blue2;
   border: none;
   outline: none;
   &:hover {
@@ -79,7 +77,20 @@ button {
 	}
 }
 
-
+.btn-reset {
+  font-size: 0.8rem;
+  color: #fff;
+  border-radius: 15px;
+  padding: 12px 18px;
+  margin-top: 25px;
+  transition: all 0.2s;
+  background-color: $blue;
+  box-shadow: 0px 0px 0px 1px $orange;
+  &.active {
+    background-color: $orange;
+    box-shadow: none;
+  }
+}
 
 .board {
   .board-row {
