--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,7 +1,8 @@
-$green: #12e177;
-$orange: #ffc72a;
-$blue: #cedce4;
-$blue2: #bacedaff;
+$green: #195335ff;
+$orange: #ffd86aff;
+$blue: #b7cbe9ff;
+$purple: #6f1c65ff;
+//$blue2: #bacedaff;
 
 body {
   font-family: 'Roboto', sans-serif;
@@ -12,7 +13,7 @@ body {
 }
 
 button {
-  background: $blue2;
+  background: none;//$blue2;
   border: none;
   outline: none;
   &:hover {
@@ -26,9 +27,12 @@ button {
   flex-direction: column;
   align-items: center;
 }
-
 .text-green {
   color: $green;
+}
+
+.text-purple{
+  color: $purple;
 }
 
 .text-orange {
@@ -68,15 +72,6 @@ button {
   }
 }
 
-.status-message {
-	margin-bottom: 30px;
-	font-size: 1.2rem;
-	font-weight: lighter;
-	span {
-	  font-weight: normal;
-	}
-}
-
 .btn-reset {
   font-size: 0.8rem;
   color: #fff;
@@ -92,6 +87,16 @@ button {
   }
 }
 
+.status-message {
+	margin-bottom: 30px;
+	font-size: 1.2rem;
+	font-weight: lighter;
+	span {
+	  font-weight: normal;
+	}
+}
+/*
+//don't know why this won't pick up the .board from App.jsx and apply
 .board {
   .board-row {
     display: flex;
@@ -110,7 +115,7 @@ button {
       transition: all 0.2s;
       &:last-child {
         border-right: none;
-      }
+      }/*
       &.winning {
 	    animation: scaleText 1.4s infinite;
 	    @keyframes scaleText {
@@ -125,10 +130,46 @@ button {
 	      }
 	    }
 	  }
+  }
+  }
+}*/
+
+.board-row {
+  display: flex;
+  flex-direction: row;
+  border-bottom: 2px solid #fff;
+  &:last-child {
+    border-bottom: none;
+  }
+  .square {
+    width: 80px;
+    height: 80px;
+    border-right: 2px solid #fff;
+    font-size: 2.5rem;
+    padding: 0;
+    overflow: hidden;
+    transition: all 0.2s;
+    &:last-child {
+      border-right: none;
+    }
+    &.winning {
+      animation: scaleText 1.4s infinite;
+      @keyframes scaleText {
+        0% {
+          transform: 2.5rem;
+        }
+        50% {
+          font-size: 3.5rem;
+        }
+        100% {
+          font-size: 2.5rem;
+        }
+      }
     }
   }
 }
 
+    
 .bg-balls {
   position: fixed;
   top: 0;
